Edited wiki page through web user interface.

--- a/wiki/GetNZB.wiki
+++ b/wiki/GetNZB.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#A tool for searching nzb files and uploading them to a HellaNZB server.
 
 = Introduction =
 
