--- a/trunk/getnzb/res/values/strings.xml
+++ b/trunk/getnzb/res/values/strings.xml
@@ -18,4 +18,6 @@
 	<string name="preferences_hellanzb_password">Password of HellaNZB server</string>
 	<string name="preferences_hellanzb_password_default"></string>
 	<string name="filelist_deletefile">Delete File</string>
+	<string name="filelist_infofile">File Information</string>
+
 </resources>
