--- a/getnzb/res/values/strings.xml
+++ b/getnzb/res/values/strings.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">GetNZB</string>
-    <string name="about_version">GetNZB v 0.0</string>
-    <string name="about_description">GetNZB is an Android application for searching http://www.nzbs.org, retrieving .nzb files and uploading them to a HellaNZB server through XMLRPC commands.</string>
-    <string name="about_help_development">GetNZB is free software released under GPLv3. You can help develop this software by posting suggestions and/or bugreports on http://getnzb.googlecode.com</string>
-	<string name="about_author">(C) 2010 Robin van Leeuwen - robinvanleeuwen@gmail.com</string>
-	<string name="about_credits">Credits go to the authors of HellaDroid, XMLRPC and HTMLCleaner.</string>
+    <string name="aboutVersion">GetNZB v 0.0</string>
+    <string name="aboutDescription">GetNZB is an Android application for searching http://www.nzbs.org, retrieving .nzb files and uploading them to a HellaNZB server through XMLRPC commands.</string>
+    <string name="aboutHelpDevelopment">GetNZB is free software released under GPLv3. You can help develop this software by posting suggestions and/or bugreports on http://getnzb.googlecode.com</string>
+	<string name="aboutAuthor">(C) 2010 Robin van Leeuwen - robinvanleeuwen@gmail.com</string>
+	<string name="aboutCredits">Credits go to the authors of HellaDroid, XMLRPC and HTMLCleaner.</string>
     
-    <string name="preferences_nzbs_username">Username of nzbs.org account</string>
-	<string name="preferences_nzbs_username_default"></string>
-	<string name="preferences_nzbs_password">Password of nzbs.org account</string>
-	<string name="preferences_nzbs_password_default"></string>
-	<string name="preferences_hellanzb_hostname">Hostname of HellaNZB server</string>
-	<string name="preferences_hellanzb_hostname_default"></string>
-	<string name="preferences_hellanzb_port">HellaNZB server port</string>
-	<string name="preferences_hellanzb_port_default">8760</string>
-	<string name="preferences_hellanzb_password">Password of HellaNZB server</string>
-	<string name="preferences_hellanzb_password_default"></string>
-	<string name="filelist_deletefile">Delete File</string>
-	<string name="filelist_infofile">File Information</string>
+    <string name="preferencesNzbsUsername">Username of nzbs.org account</string>
+	<string name="preferencesNzbsUsernameDefault"></string>
+	<string name="preferencesNzbsPassword">Password of nzbs.org account</string>
+	<string name="preferencesNzbsPasswordDefault"></string>
+	<string name="preferencesHellaNZBHostname">Hostname of HellaNZB server</string>
+	<string name="preferencesHellaNZBHostnameDefault"></string>
+	<string name="preferencesHellaNZBPort">HellaNZB server port</string>
+	<string name="preferencesHellaNZBPortDefault">8760</string>
+	<string name="preferencesHellaNZBPassword">Password of HellaNZB server</string>
+	<string name="preferencesHellaNZBPasswordDefault"></string>
+	<string name="localFileList_deleteFile">Delete File</string>
+	<string name="localFileList_infoFile">File Information</string>
 
 </resources>
