Added context menu for HellaNZB queue items. Remove files from HellaNZB queue. Pause HellaNZB server.

--- a/getnzb/res/values/strings.xml
+++ b/getnzb/res/values/strings.xml
@@ -33,7 +33,7 @@
 	<string name="preferencesFTPUploadPath">Upload file to directory</string>
 	<string name="preferencesFTPUploadPathDefault">~/</string>
 	
-	
+	<string name="hellanzb_deleteFile">Delete File</string>	
 	
 	<string name="localFileList_deleteFile">Delete File</string>
 	<string name="localFileList_infoFile">File Information</string>
