--- a/trunk/getnzb/res/values/strings.xml
+++ b/trunk/getnzb/res/values/strings.xml
@@ -33,6 +33,9 @@
 	<string name="preferencesFTPPortDefault">21</string>
 	<string name="preferencesFTPUploadPath">Upload file to directory</string>
 	<string name="preferencesFTPUploadPathDefault">~/</string>
+
+	<string name="preferencesDropboxUsername">Dropbox account (email)</string>	
+	<string name="preferencesDropboxPassword">Password for Dropbox account</string>
 	
 	<string name="hellanzb_deleteFile">Delete File</string>	
 	<string name="hellanzb_moveTop">Move to top</string>
@@ -44,7 +47,7 @@
 	<string name="localFileList_infoFile">File Information</string>
 	<string name="localFileList_uploadFTP">Upload to FTP server</string>
 	<string name="localFileList_uploadHellaNZB">Upload to HellaNZB server</string>
-	
+	<string name="localFileList_uploadDropbox">Upload to Dropbox account</string>
 	<string name="deleteMySearch">Delete Search</string>
 	<string name="editMySearch">Edit Search</string>
 
